# exercise_python_koni2

./: .gitignore  README.md  pyproject.toml  xmlfile.xml
exercise_python_koni2/: __init__.py  json2xml.py
readfiles/: jsonfile.json
tests/: test_exercise_python_koni2.py
