[tool.poetry]
name = "exercise_python_koni2"
version = "0.1.0"
description = ""
authors = ["konishis <gts.0424.koni2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
dicttoxml = "^1.7.4"
black = "^20.8b1"
pylint = "^2.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
